--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1086,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue",'hiragino kaku gothic pro', Meiryo, Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue",'hiragino kaku gothic pro', "Yu Gothic", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
